--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,9 @@ body{
     background-color: rgba(209, 209, 209, 0.075);
 }
 #arrow{
-    width: 20px;
+    width: 28px;
     background-color: transparent;
+    
 }
 #top-btn{
     position: fixed;
@@ -11,6 +12,10 @@ body{
     right: 5px;
     border: none;
     background-color: transparent;
+    z-index: 0;
+}
+#top-btn:hover{
+    transform: scale(1.2);
 }
 .header{
     position: fixed;
@@ -22,9 +27,16 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    
 }
-.pg-btn{
+.pg-btn:hover{
+    transform: scale(1.2);
+}
+.pg-btn{ 
     margin-top: 45px;
+}
+#prev-btn{
+    visibility: visible;
 }
 
 #list-wrapper{
@@ -44,6 +56,7 @@ body{
     justify-content:space-evenly;
     max-width: 1200px;
     margin-top: 110px;
+    padding-bottom: 130px;
 }
 .poke-box {
     font-size: auto;
