--- a/src/pokemon.css
+++ b/src/pokemon.css
@@ -21,6 +21,7 @@
     width: 250px;
     border-radius: 7px; 
     color: white;
+    margin: 3px;
     box-shadow: 5px 0px 5px 5px rgba(0, 0, 0, 0.295);
 }
 .poke-name{
