--- a/src/src/pokedex.css
+++ b/src/src/pokedex.css
@@ -1,7 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
+body{
+    font-family: 'Inter', sans-serif;
+}
+button{
+    font-family: 'Inter', sans-serif;
+}
 #list-wrapper{
     display: flex;
     justify-content: center;
     background-image: url("https://images.alphacoders.com/201/201831.png");
+    background-color: white;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
@@ -25,16 +34,14 @@
     color: white;
     margin: 3px;
     box-shadow: 5px 0px 5px 5px rgba(0, 0, 0, 0.295);
+    -webkit-animation: scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    animation: scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 .poke-name{
     font-size: large;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
     font-weight:700;
     color: whitesmoke;
-}
-.poke-name:hover{
-    transform: scale(1.2);
 }
 .poke-id{
     margin-left: 10px;
@@ -48,9 +55,8 @@
     margin-left: 5px;
     margin-right: 5px;
 }
-
 .pic:hover{
-    animation: rotation .2s  linear;
+    animation: rotation .3s  linear;
 }
 @keyframes rotation{
     from{ transform: rotate(0deg)}
@@ -58,8 +64,41 @@
 }
 .poke-type{
     margin-left: 10px;
-    font-size: 13px;
+    font-size: 16px;
     color: whitesmoke;
+}
+.btn-box{
+    margin-left: 140px;
+    margin-bottom: 5px; 
+}
+.select-btn{
+  align-items: center;
+  background-color: #fff;
+  border-radius: 2px;
+  box-shadow: transparent 0 0 0 3px,rgba(18, 18, 18, .1) 0 6px 20px;
+  box-sizing: border-box;
+  color: #121212;
+  cursor: pointer;
+  display: inline-flex;
+  flex: 1 1 auto;
+  font-size: 14px;
+  font-weight: 500;
+  justify-content: center;
+  line-height: 1;
+  margin: 0;
+  outline: none;
+  padding: 2px;
+  text-align: center;
+  text-decoration: none;
+  transition: box-shadow .2s,-webkit-box-shadow .2s;
+  white-space: nowrap;
+  border: 0;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+.select-btn:hover {
+  box-shadow: #121212 0 0 0 3px, transparent 0 0 0 0;
 }
 .dropdown{
     position: relative;
@@ -71,6 +110,7 @@
     border: none;
     padding-bottom: 15px;
     color: whitesmoke;
+    font-size: 14px; 
 }
 .drop-button::after{
     content: '\25be';
@@ -99,3 +139,27 @@ li{
     display:flex;
     justify-content: space-between;
 }
+@-webkit-keyframes scale-in-center {
+    0% {
+      -webkit-transform: scale(0);
+              transform: scale(0);
+      opacity: 1;
+    }
+    100% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+      opacity: 1;
+    }
+  }
+  @keyframes scale-in-center {
+    0% {
+      -webkit-transform: scale(0);
+              transform: scale(0);
+      opacity: 1;
+    }
+    100% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+      opacity: 1;
+    }
+  }
